--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <header class="header">
       <nav class="header-navigation">
         <a class="header-logo" href="./index.html"
-          ><span class="header-logo-color">Web</span>Studio</a
+          >Web <span>Studio</span></a
         >
         <ul class="header-menu-list">
           <li class="header-menu-item">
-            <a class="header-menu-link" href="">Studio</a>
+            <a class="header-menu-link" href="./index.html">Studio</a>
           </li>
           <li class="header-menu-item">
             <a class="header-menu-link" href="">Portfolio</a>
@@ -37,7 +37,7 @@
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="header-address">
         <ul>
           <li class="header-contact">
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
