--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
               class="portfolio-picture"
               src="./images/banking-app.jpg"
               alt="banking-app"
-              width="264"
+              width="360"
             />
             <h3 class="portfolio-subtitle">Banking App</h3>
             <p class="portfolio-item-text">App</p>
@@ -151,7 +151,7 @@
               class="portfolio-picture"
               src="./images/cashless-payment.jpg"
               alt="cashless-payment"
-              width="264"
+              width="360"
             />
             <h3 class="portfolio-subtitle">Cashless Payment</h3>
             <p class="portfolio-item-text">Marketing</p>
@@ -161,7 +161,7 @@
               class="portfolio-picture"
               src="./images/meditation-app.jpg"
               alt="meditation-app"
-              width="264"
+              width="360"
             />
             <h3 class="portfolio-subtitle">Meditation App</h3>
             <p class="portfolio-item-text">App</p>
@@ -171,7 +171,7 @@
               class="portfolio-picture"
               src="./images/taxi-service.jpg"
               alt="taxi-service"
-              width="264"
+              width="360"
             />
             <h3 class="portfolio-subtitle">Taxi Service</h3>
             <p class="portfolio-item-text">Marketing</p>
@@ -181,7 +181,7 @@
               class="portfolio-picture"
               src="./images/screen-illustrations.jpg"
               alt="screen-illustrations"
-              width="264"
+              width="360"
             />
             <h3 class="portfolio-subtitle">Screen Illustrations</h3>
             <p class="portfolio-item-text">Design</p>
@@ -191,7 +191,7 @@
               class="portfolio-picture"
               src="./images/online-courses.jpg"
               alt="online-courses"
-              width="264"
+              width="360"
             />
             <h3 class="portfolio-subtitle">Online Courses</h3>
             <p class="portfolio-item-text">Marketing</p>
@@ -200,7 +200,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="footer-logo"> <span>Web</span>Studio</a>
+      <a href="./index.html" class="footer-logo"> Web<span>Studio</span></a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
