--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         >
         <ul class="header-menu-list">
           <li class="header-menu-item">
-            <a class="header-menu-link" href="./index.html">Studio</a>
+            <a href="./index.html" class="header-menu-link">Studio</a>
           </li>
           <li class="header-menu-item">
             <a class="header-menu-link" href="">Portfolio</a>
@@ -40,10 +40,10 @@
       <address class="header-address">
         <ul>
           <li class="header-contact">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class ="header-contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li class="header-contact">
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class ="header-contact-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
