--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
   <body>
     <header class="header">
       <nav class="header-navigation">
-        <a class="header-logo" href="./index.html"
-          >Web <span>Studio</span></a
-        >
+        <a class="header-logo" href="./index.html">Web <span>Studio</span></a>
         <ul class="header-menu-list">
           <li class="header-menu-item">
             <a href="./index.html" class="header-menu-link">Studio</a>
@@ -40,10 +38,14 @@
       <address class="header-address">
         <ul>
           <li class="header-contact">
-            <a class ="header-contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="header-contact-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li class="header-contact">
-            <a class ="header-contact-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="header-contact-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -51,7 +53,7 @@
 
     <main>
       <section class="solution">
-        <h1 class="solution-logo">Effective Solutions for Your Business</h1>
+        <h1>Effective Solutions for Your Business</h1>
         <button type="button" class="solution-btn">Order Service</button>
       </section>
 
@@ -200,7 +202,9 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="footer-logo"> Web<span>Studio</span></a>
+      <a class="footer-logo" href="./index.html">
+        Web<span class="footer-logo-span">Studio</span></a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
