--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a class="header-logo" href="./index.html">Web <span>Studio</span></a>
         <ul class="header-menu-list">
           <li class="header-menu-item">
-            <a href="./index.html" class="header-menu-link">Studio</a>
+            <a href="./index.html" class="header-menu-lin">Studio</a>
           </li>
           <li class="header-menu-item">
             <a class="header-menu-link" href="">Portfolio</a>
@@ -35,15 +35,15 @@
           </li>
         </ul>
       </nav>
-      <address class="header-address">
-        <ul>
-          <li class="header-contact">
-            <a class="header-contact-link" href="mailto:info@devstudio.com"
+      <address class="header-contact">
+        <ul class="header-contact-list">
+          <li class="header-contact-item">
+            <a class="header-contact-lin" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="header-contact">
-            <a class="header-contact-link" href="tel:+110001111111"
+          <li class="header-contact-item">
+            <a class="header-contact-lin" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -53,7 +53,7 @@
 
     <main>
       <section class="solution">
-        <h1>Effective Solutions for Your Business</h1>
+        <h1 class="solution-title">Effective Solutions for Your Business</h1>
         <button type="button" class="solution-btn">Order Service</button>
       </section>
 
