--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             <a href="./index.html" class="header-menu-lin">Studio</a>
           </li>
           <li class="header-menu-item">
-            <a class="header-menu-link" href="">Portfolio</a>
+            <a class="header-menu-lin" href="">Portfolio</a>
           </li>
           <li class="header-menu-item">
-            <a class="header-menu-link" href="">Contacts</a>
+            <a class="header-menu-lin" href="">Contacts</a>
           </li>
         </ul>
       </nav>
