--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a class="header-logo" href="./index.html">Web <span>Studio</span></a>
         <ul class="header-menu-list">
           <li class="header-menu-item">
-            <a href="./index.html" class="header-menu-lin">Studio</a>
+            <a class="header-menu-lin" href="./index.html">Studio</a>
           </li>
           <li class="header-menu-item">
             <a class="header-menu-lin" href="">Portfolio</a>
